Spacing fix

--- a/scss/components/_form.scss
+++ b/scss/components/_form.scss
@@ -242,4 +242,8 @@ input[type="checkbox"]:checked:hover:before {
     position: absolute;
     top: 0.5rem;
   }
+
+  textarea {
+    min-height: var(--size-600);
+  }
 }
